--- a/gradle-test-task.yml
+++ b/gradle-test-task.yml
@@ -3,8 +3,9 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source: {repository: busybox}
-
+  source:
+        repository: java
+            tag: '8'
 inputs:
 - name: resource-ozaki
 
