--- a/gradle-test-task.yml
+++ b/gradle-test-task.yml
@@ -3,9 +3,7 @@ platform: linux
 
 image_resource:
   type: docker-image
-  source:
-        repository: java
-        tag: '8'
+  source: { repository: java, tag: '8' }
 inputs:
 - name: resource-ozaki
 
